# RL-hockey

./: .gitignore  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  calculate_inertia.py  interactive_viewer.py  main.py  pyproject.toml  run_eval.sh  run_train.sh  train.py
assets/: crane_x7.xml  main.xml
izumi/: model.ipynb
izumi/assets/: crane_x7.xml
logs_hockey/: monitor.monitor.csv
myenv/: base_env.py  env.py
myenv2/: env.py
