[project]
name = "rl-hockey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "imageio>=2.37.0",
    "mujoco>=3.3.2",
    "opencv-python>=4.11.0.86",
    "stable-baselines3>=2.6.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]
